# Roadside-Digital-Twin-TD3-Sync

./: .gitignore  README.md  pyproject.toml  requirements.txt
leader_dt/: __init__.py  config.py  constants.py  types.py
leader_dt/baselines/: greedy.py  no_refresh.py  random_policy.py
leader_dt/domain/: entities.py  scenario.py  sensor_pairs.py  topology.py
leader_dt/evaluation/: __init__.py  metrics.py  metrics.py.old  monte_carlo.py  penalized_objective.py  reporting.py  rollout.py  sensitivity.py
leader_dt/io/: __init__.py  config_io.py  results_io.py
leader_dt/models/: accuracy.py  aoi.py  communication.py  cpu.py  objective.py
leader_dt/optimization/: milp_constraints.py  milp_objective.py  milp_solver.py  milp_variables.py
leader_dt/plotting/: __init__.py  comparison_plots.py  convergence_plots.py  sensitivity_plots.py
leader_dt/rl/: observation.py  reward.py  td3_agent.py  wrappers.py
leader_dt/simulator/: action.py  dynamics.py  environment.py  recorder.py  state.py
leader_dt/verification/: __init__.py  z3_feasibility.py
notebooks/: 01_result_analysis.ipynb
scripts/: check_z3_feasibility.py  diagnose_policy.py  generate_figures.py  plot_penalized_comparison.py  run_monte_carlo.py  run_sensitivity.py  run_smoke_tests.py  train_td3.py  train_td3_multiseed.py  train_td3_until_convergence.py
tests/: test_environment.py  test_penalized_objective.py  test_z3_feasibility.py
